--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>primera app con repositorio de git</title>
   </head>
   <body>
-    
+    <header>
+      <nav>
+        <ul>
+          <li1>inicio</li1>
+          <li2>servicio</li2>
+          <li3>contacto</li3>
+        </ul>
+
+      </nav>
+
+    </header>
 
 
 
